--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,351 @@
-/* место для вашего кода */
+.main {
+    position: relative;
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items: center;
+    margin-bottom: 0;
+    background-color: white;
+    width: 100%;
+    height: 293px;
+}
+
+.header__menu {
+    display: flex;
+    flex-direction: row;
+    gap: 13px;
+}
+.header__logo {
+    display: block;
+    width: 148px;
+    height: 105px;
+    background: url('../images/logo-black.svg') no-repeat center;
+    background-size: contain;
+}
+
+.header__address {
+    max-width: 240px;
+    justify-self: end;
+}
+
+.cover {
+    margin-top: 0;
+    margin-bottom: 180px;
+    width: 100%;
+    height: 757px;
+    background-image: url('../images/cover.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    color: white;
+}
+
+.cover__container {
+    width: 100%;
+    max-width: 1100px;          /* Ширина контента */
+    margin: 0 auto;              /* Центрируем */
+    height: 100%;
+    position: relative;
+    padding: 0 24px;             /* Отступы на узких экранах */
+    box-sizing: border-box;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+
+
+.cover__title {
+    font-family: Raleway;
+    font-weight: 700;
+    font-style: Bold;
+    font-size: 100px;
+    line-height: 114.99999999999999%;
+    letter-spacing: 30%;
+    text-transform: uppercase;
+    color: white;
+}
+
+.span {
+    position: absolute;
+    z-index: 2;
+    white-space: nowrap;
+    letter-spacing: 30px;
+}
+.one {
+    top: 165px;
+    left: 50px;
+}
+.two {
+    top: 300px;
+    left: 380.5px;
+}
+.three {
+    top: 435px;
+    left: 663px;
+}
+.cover__description {
+    position: absolute;
+    bottom: 50px;
+    display: flex;
+    flex-direction: row;
+    left: 50px;
+    right: 50px;
+    gap: 107px;
+}
+.subline {
+    font-family: Raleway;
+    font-weight: 400;
+    font-style: Regular;
+    font-size: 22px;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-transform: uppercase;
+    letter-spacing: 90%;
+    word-spacing: 20px;
+    white-space: nowrap;
+    width: 637px;
+    height: 28px;
+    opacity: 1;
+    top: 668px;
+    left: 50px;
+    z-index: 2;
+}
+
+.header__links-list {
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+    margin-top: 27px;
+}
+
+.header__links-list-item {
+    font-family: Raleway;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: black;
+
+}
+.header__links-list li {
+    list-style: circle;
+}
+button {
+    background: none;
+    border: none;
+    padding: 0;
+    outline: none;
+    appearance: none;
+    border: 1px white solid;
+    width: 256px;
+    height: 51px;
+    font-family: Raleway;
+    font-weight: 500;
+    font-style: Medium;
+    font-size: 22px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    z-index: 2;
+}
+
+.lots__card-list-item {
+    width: 334px;
+    min-height: 596px;
+}
+
+.card-link {
+    height: 100%;
+    display: block;
+    height: 100%;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    text-decoration: none;
+}
+
+.cover__description-text {
+    font-family: Raleway;
+    font-weight: 700;
+    font-style: Bold;
+    font-size: 22px;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-decoration-style: solid;
+    text-decoration-thickness: 0%;
+    color: white;
+    margin: 48px 40px 0px 40px;
+}
+
+.card__text {
+    font-family: Raleway;
+    font-weight: 400;
+    font-style: Regular;
+    font-size: 20px;
+    line-height: 120%;
+    letter-spacing: 0%;
+    color: white;
+    margin: 0px 40px 48px 40px;
+}
+.card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    z-index: 0;
+}
+
+.lots {
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+    flex-wrap: wrap;
+}
+
+.lots__card-list {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+    align-content: space-between;;
+}
+
+.lots__look-more-link {
+    font-family: Raleway;
+    font-weight: 400;
+    font-style: Regular;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    border-bottom: 1px solid black;
+    color: black;
+    margin-left: 64px;
+}
+
+.about {
+    gap: 72px;
+    margin-top: 120px;
+}
+.about .container {
+    display: grid;
+    grid-template-columns: 334px 1fr;
+}
+
+.logo__column {
+    display: flex;
+    justify-content: center;
+    margin-top: 35px;
+
+}
+
+.about__logo {
+    width: 240px;
+    height: 240px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: black
+}
+
+.about__logo-image {
+    object-fit: contain;
+    width: 148px;
+    height: 114px;
+}
+
+.about__title {
+    font-family: Raleway;
+    font-weight: 700;
+    font-style: Bold;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-transform: uppercase;
+}
+
+.about__text {
+    font-family: Raleway;
+    font-weight: 400;
+    font-style: Regular;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0%;
+    width: 693px;
+}
+
+.about__column {
+    align-self: end; /* Прижимает блок к нижнему краю */
+}
+.about__text:first-child {
+    margin-bottom: 24px;
+}
+
+/* === Универсальный контейнер с отступами === */
+.container {
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 24px;
+    box-sizing: border-box;
+}
+
+.footer .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+    align-items: start;
+    height: 180px;
+    margin-top: 180px;
+}
+
+.footer__menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.footer__menu-link {
+    font-family: Raleway;
+    font-weight: 400;
+    font-style: Regular;
+    font-size: 18px;
+    line-height: 24.3px;
+    letter-spacing: 0%;
+    color: black;
+}
+
+.footer__social-list {
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    gap: 16px;
+    width: 240px;
+    height: 48px;
+    justify-content: space-between;
+    list-style: none;
+}
+.footer__social-icon {
+    height: 48px;
+    width: 48px;
+}
+.footer__menu-list-item {
+    list-style: none;
+}
