--- a/styles/style.css
+++ b/styles/style.css
@@ -44,11 +44,11 @@
 
 .cover__container {
     width: 100%;
-    max-width: 1100px;          /* Ширина контента */
-    margin: 0 auto;              /* Центрируем */
+    max-width: 1100px;
+    margin: 0 auto;
     height: 100%;
     position: relative;
-    padding: 0 24px;             /* Отступы на узких экранах */
+    padding: 0 24px;
     box-sizing: border-box;
 }
 
@@ -166,8 +166,8 @@ button {
 }
 
 .card-link {
-    display: block;
     height: 100%;
+    display: block;
     position: relative;
     background-size: cover;
     background-position: center;
