--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     align-items: center;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     background-color: white;
     width: 100%;
     height: 293px;
