--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,20 @@
     z-index: 1;
 }
 
+.one {
+    top: 155px;
+    left: 40px;
+}
 
+.two {
+    top: 300px;
+    left: 380px;
+}
+
+.three {
+    top: 430px;
+    left: 650px;
+}
 
 .cover__title {
     font-family: Raleway;
