--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,8 @@
     display: flex;
     flex-direction: row;
     gap: 13px;
-    align-self: start;
+    align-self: center;
+    justify-self: center;
 }
 
 .header__logo {
@@ -101,11 +102,8 @@
     letter-spacing: 12px;
 }
 
-
-
 .cover__description {
     position: absolute;
-    bottom: 50px;
     display: flex;
     flex-direction: row;
     left: 50px;
