--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
     align-items: center;
     background-color: white;
     width: 100%;
-    height: 150px;
+    height: 145px;
     margin-bottom: 0;
     padding: 40px 0;
 }
@@ -17,8 +17,8 @@
     display: flex;
     flex-direction: row;
     gap: 13px;
-    align-self: center;
-    justify-self: center;
+    align-self: start;
+    margin-top: 15px;
 }
 
 .header__logo {
@@ -68,6 +68,25 @@
     z-index: 1;
 }
 
+.cover__title {
+    font-family: Raleway;
+    font-weight: 700;
+    font-style: Bold;
+    font-size: 100px;
+    line-height: 114.99999999999999%;
+    text-transform: uppercase;
+    color: white;
+    position: relative;
+    letter-spacing: 30px;
+}
+
+.span {
+    position: absolute;
+    z-index: 2;
+    white-space: nowrap;
+    letter-spacing: 12px;
+}
+
 .one {
     top: 155px;
     left: 40px;
@@ -80,35 +99,17 @@
 
 .three {
     top: 430px;
-    left: 650px;
-}
-
-.cover__title {
-    font-family: Raleway;
-    font-weight: 700;
-    font-style: Bold;
-    font-size: 100px;
-    line-height: 114.99999999999999%;
-    text-transform: uppercase;
-    color: white;
-    position: relative;
-    letter-spacing: 20px;
-}
-
-.span {
-    position: absolute;
-    z-index: 2;
-    white-space: nowrap;
-    letter-spacing: 12px;
+    left: 680px;
 }
 
 .cover__description {
     position: absolute;
+    bottom: 50px;
     display: flex;
     flex-direction: row;
     left: 50px;
     right: 50px;
-    bottom: 60px;
+    bottom: 55px;
     gap: 60px;
 }
 
@@ -174,10 +175,17 @@ button {
 
 .lots__card-list-item {
     width: 334px;
-    height: 520px;
+    height: 560px;
 }
 .lots__heading {
-    margin-left: 50px;
+    margin-left: 64px;
+    font-family: Raleway;
+    font-weight: 700;
+    font-style: Bold;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-transform: uppercase;
 }
 
 .card-link {
@@ -202,6 +210,8 @@ button {
     text-decoration-thickness: 0%;
     color: white;
     margin-top: 30px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .card__text {
@@ -229,6 +239,7 @@ button {
     flex-direction: row;
     gap: 25px;
     flex-wrap: wrap;
+    margin: 0;
 }
 
 .lots .container {
@@ -241,7 +252,6 @@ button {
     flex-direction: row;
     gap: 25px;
     align-content: space-between;
-    ;
 }
 
 .lots__look-more-link {
@@ -254,7 +264,6 @@ button {
     border-bottom: 1px solid black;
     color: black;
     margin-left: 64px;
-    margin-top: 20px;
 }
 
 .about {
@@ -326,6 +335,7 @@ button {
     margin: 0 auto;
     padding: 0 24px;
     box-sizing: border-box;
+    margin-bottom: 20px;
 }
 
 .footer .container {
