--- a/styles/style.css
+++ b/styles/style.css
@@ -17,8 +17,9 @@
     display: flex;
     flex-direction: row;
     gap: 13px;
-    align-self: start;
     margin-top: 15px;
+    align-self: center;
+    justify-self: center;
 }
 
 .header__logo {
@@ -38,7 +39,7 @@
 
 .cover {
     margin-top: 0;
-    margin-bottom: 180px;
+    margin-bottom: 150px;
     width: 100%;
     height: 760px;
     background-image: url('../images/cover.jpg');
@@ -77,7 +78,7 @@
     text-transform: uppercase;
     color: white;
     position: relative;
-    letter-spacing: 30px;
+    letter-spacing: 40px;
 }
 
 .span {
@@ -94,12 +95,12 @@
 
 .two {
     top: 300px;
-    left: 380px;
+    left: 400px;
 }
 
 .three {
     top: 430px;
-    left: 680px;
+    left: 720px;
 }
 
 .cover__description {
