--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     gap: 13px;
-    margin-top: 15px;
+    margin-top: 60px;
     align-self: center;
     justify-self: center;
 }
@@ -39,7 +39,7 @@
 
 .cover {
     margin-top: 0;
-    margin-bottom: 150px;
+    margin-bottom: 130px;
     width: 100%;
     height: 760px;
     background-image: url('../images/cover.jpg');
@@ -78,7 +78,7 @@
     text-transform: uppercase;
     color: white;
     position: relative;
-    letter-spacing: 40px;
+    letter-spacing: 90px;
 }
 
 .span {
@@ -100,7 +100,7 @@
 
 .three {
     top: 430px;
-    left: 720px;
+    left: 700px;
 }
 
 .cover__description {
@@ -108,6 +108,7 @@
     bottom: 50px;
     display: flex;
     flex-direction: row;
+    align-items: end;
     left: 50px;
     right: 50px;
     bottom: 55px;
