--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@
     width: 148px;
     height: 105px;
     background-size: contain;
+    margin-top: 15px;
 }
 
 .header__address {
@@ -35,11 +36,13 @@
     margin: 0;
     padding: 0;
     line-height: 18px;
+    margin-right: 20px;
+    margin-top: 20px;
 }
 
 .cover {
     margin-top: 0;
-    margin-bottom: 130px;
+    margin-bottom: 110px;
     width: 100%;
     height: 760px;
     background-image: url('../images/cover.jpg');
@@ -78,7 +81,7 @@
     text-transform: uppercase;
     color: white;
     position: relative;
-    letter-spacing: 90px;
+    letter-spacing: 120px;
 }
 
 .span {
@@ -90,17 +93,17 @@
 
 .one {
     top: 155px;
-    left: 35px;
+    left: 30px;
 }
 
 .two {
-    top: 300px;
-    left: 370px;
+    top: 298px;
+    left: 355px;
 }
 
 .three {
     top: 430px;
-    left: 640px;
+    left: 635px;
 }
 
 .cover__description {
@@ -173,6 +176,7 @@ button {
     text-transform: uppercase;
     color: white;
     z-index: 2;
+    margin-left: 50px;
 }
 
 .lots__card-list-item {
