--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
     align-items: center;
     background-color: white;
     width: 100%;
-    height: 145px;
+    height: 143px;
     margin-bottom: 0;
     padding: 40px 0;
 }
@@ -42,7 +42,7 @@
 
 .cover {
     margin-top: 0;
-    margin-bottom: 110px;
+    margin-bottom: 120px;
     width: 100%;
     height: 760px;
     background-image: url('../images/cover.jpg');
@@ -88,22 +88,22 @@
     position: absolute;
     z-index: 2;
     white-space: nowrap;
-    letter-spacing: 15px;
+    letter-spacing: 25px;
 }
 
 .one {
     top: 155px;
-    left: 30px;
+    left: 28px;
 }
 
 .two {
     top: 298px;
-    left: 355px;
+    left: 354px;
 }
 
 .three {
     top: 430px;
-    left: 635px;
+    left: 634px;
 }
 
 .cover__description {
@@ -111,10 +111,10 @@
     bottom: 50px;
     display: flex;
     flex-direction: row;
-    align-items: end;
+    align-items: center;
     left: 50px;
     right: 50px;
-    bottom: 55px;
+    bottom: 52px;
     gap: 60px;
 }
 
@@ -176,7 +176,7 @@ button {
     text-transform: uppercase;
     color: white;
     z-index: 2;
-    margin-left: 50px;
+    margin-left: 100px;
 }
 
 .lots__card-list-item {
@@ -242,17 +242,24 @@ button {
 }
 
 .lots {
-    display: flex;
-    flex-direction: row;
+    display: block;
+    width: 100%;
     gap: 25px;
-    flex-wrap: wrap;
-    margin: 0;
+    padding-bottom: 5px;
+}
+
+.lots {
+    display: block;
+    width: 100%;
+    padding-bottom: 30px;
 }
 
 .lots .container {
     margin-top: 60px;
     padding: 0 24px;
     margin: 0;
+    width: 100%;
+    max-width: 100%;
     box-sizing: border-box;
 }
 
@@ -274,6 +281,7 @@ button {
     border-bottom: 1px solid black;
     color: black;
     margin-left: 64px;
+    margin-top: 10px;
 }
 
 .about {
