--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
     align-items: center;
     background-color: white;
     width: 100%;
-    height: 143px;
+    height: 141px;
     margin-bottom: 0;
     padding: 40px 0;
 }
@@ -42,7 +42,7 @@
 
 .cover {
     margin-top: 0;
-    margin-bottom: 120px;
+    margin-bottom: 150px;
     width: 100%;
     height: 760px;
     background-image: url('../images/cover.jpg');
@@ -88,22 +88,22 @@
     position: absolute;
     z-index: 2;
     white-space: nowrap;
-    letter-spacing: 25px;
+    letter-spacing: 28px;
 }
 
 .one {
     top: 155px;
-    left: 28px;
+    left: 25px;
 }
 
 .two {
     top: 298px;
-    left: 354px;
+    left: 352px;
 }
 
 .three {
     top: 430px;
-    left: 634px;
+    left: 633px;
 }
 
 .cover__description {
@@ -114,7 +114,7 @@
     align-items: center;
     left: 50px;
     right: 50px;
-    bottom: 52px;
+    bottom: 48px;
     gap: 60px;
 }
 
@@ -158,13 +158,13 @@
     list-style: circle;
 }
 
-button {
+.button {
     background: none;
     padding: 0;
     outline: none;
     appearance: none;
     border: 1px white solid;
-    width: 246px;
+    width: 266px;
     height: 51px;
     font-family: Raleway;
     font-weight: 500;
@@ -176,7 +176,7 @@ button {
     text-transform: uppercase;
     color: white;
     z-index: 2;
-    margin-left: 100px;
+    margin-left: 90px;
 }
 
 .lots__card-list-item {
@@ -184,7 +184,8 @@ button {
     height: 560px;
 }
 .lots__heading {
-    margin-left: 64px;
+    margin-left: 0;
+    padding-left: 24px;
     font-family: Raleway;
     font-weight: 700;
     font-style: Bold;
@@ -192,7 +193,7 @@ button {
     line-height: 100%;
     letter-spacing: 0%;
     text-transform: uppercase;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .card-link {
@@ -242,16 +243,11 @@ button {
 }
 
 .lots {
-    display: block;
+    padding: 0 24px;
+    margin: 0;
     width: 100%;
-    gap: 25px;
-    padding-bottom: 5px;
-}
-
-.lots {
-    display: block;
-    width: 100%;
-    padding-bottom: 30px;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .lots .container {
@@ -272,6 +268,7 @@ button {
 }
 
 .lots__look-more-link {
+    display: block;
     font-family: Raleway;
     font-weight: 400;
     font-style: Regular;
