--- a/styles/style.css
+++ b/styles/style.css
@@ -114,6 +114,7 @@
     align-items: center;
     left: 50px;
     right: 50px;
+    bottom: 48px;
     gap: 60px;
 }
 
@@ -192,6 +193,7 @@
     letter-spacing: 0%;
     text-transform: uppercase;
     margin-bottom: 50px;
+    padding-left: 0;
 }
 
 .card-link {
@@ -242,16 +244,12 @@
 
 .lots {
     padding: 0 24px;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
     box-sizing: border-box;
 }
 
 .lots .container {
-    margin-top: 60px;
     padding: 0;
-    margin: 0;
+    margin-top: 60px;
     width: 100%;
     max-width: 100%;
     box-sizing: border-box;
@@ -287,15 +285,15 @@
 .about .container {
     display: grid;
     grid-template-columns: 334px 1fr;
-    align-items: stretch;
-    padding-bottom: 40px;
-    gap: 60px;
+    gap: 72px;
+    align-items: stretch
 }
 
 .logo__column {
     display: flex;
-    justify-content: center;
-    margin-top: 35px;
+    flex-direction: column;
+    /*justify-content: center;
+    margin-top: 35px; */    
 }
 
 .about__logo {
@@ -355,6 +353,7 @@
     margin-bottom: 20px;
 }
 
+
 .footer .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -399,4 +398,8 @@
 
 .footer__menu-list-item {
     list-style: none;
+}
+
+.footer {
+    height: 
 }
