--- a/styles/style.css
+++ b/styles/style.css
@@ -75,9 +75,7 @@
 .cover__title {
     font-family: Raleway;
     font-weight: 700;
-    font-style: Bold;
     font-size: 100px;
-    line-height: 114.99999999999999%;
     text-transform: uppercase;
     color: white;
     position: relative;
@@ -91,26 +89,22 @@
     letter-spacing: 28px;
 }
 
-.one {
+.one { 
     top: 155px;
-    left: 25px;
+    left: 25px; 
 }
-
-.two {
+.two { 
     top: 298px;
-    left: 352px;
+    left: 352px; 
 }
-
 .three {
     top: 430px;
-    left: 633px;
+    left: 633px; 
 }
 
 .cover__description {
     position: absolute;
-    bottom: 50px;
     display: flex;
-    flex-direction: row;
     align-items: center;
     left: 50px;
     right: 50px;
@@ -121,24 +115,17 @@
 .subline {
     font-family: Raleway;
     font-weight: 400;
-    font-style: Regular;
     font-size: 22px;
     line-height: 28px;
     text-transform: uppercase;
     letter-spacing: 1px;
     word-spacing: 5px;
     white-space: nowrap;
-    width: auto;
-    height: 28px;
-    opacity: 1;
-    top: 668px;
-    left: 50px;
     z-index: 2;
 }
 
 .header__links-list {
     display: flex;
-    flex-direction: row;
     margin: 0;
     padding: 0;
     gap: 35px;
@@ -146,36 +133,24 @@
 
 .header__links-list-item {
     font-family: Raleway;
-    font-weight: 400;
-    font-style: normal;
     font-size: 18px;
-    line-height: 100%;
-    letter-spacing: 0%;
     color: black;
 }
 
-.header__links-list li {
+.header__links-list li { 
     list-style: circle;
 }
 
 .button {
     background: none;
-    padding: 0;
-    outline: none;
-    appearance: none;
-    border: 1px white solid;
+    border: 1px solid white;
     width: 266px;
     height: 51px;
     font-family: Raleway;
     font-weight: 500;
-    font-style: Medium;
     font-size: 22px;
-    line-height: 100%;
-    letter-spacing: 0%;
-    text-align: center;
     text-transform: uppercase;
     color: white;
-    z-index: 2;
     margin-left: 90px;
 }
 
@@ -183,17 +158,14 @@
     width: 334px;
     height: 560px;
 }
+
 .lots__heading {
-    margin-left: 0;
+    padding-left: 24px;
+    margin-bottom: 50px;
     font-family: Raleway;
     font-weight: 700;
-    font-style: Bold;
     font-size: 40px;
-    line-height: 100%;
-    letter-spacing: 0%;
     text-transform: uppercase;
-    margin-bottom: 50px;
-    padding-left: 0;
 }
 
 .card-link {
@@ -208,29 +180,20 @@
 .cover__description-text {
     font-family: Raleway;
     font-weight: 700;
-    font-style: Bold;
     font-size: 22px;
     line-height: 120%;
-    letter-spacing: 0%;
     text-transform: uppercase;
     text-decoration: underline;
-    text-decoration-style: solid;
-    text-decoration-thickness: 0%;
     color: white;
-    margin-top: 30px;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin: 30px 40px;
 }
 
 .card__text {
     font-family: Raleway;
-    font-weight: 400;
-    font-style: Regular;
     font-size: 20px;
     line-height: 120%;
-    letter-spacing: 0%;
     color: white;
-    margin: 0px 40px 48px 40px;
+    margin: 0 40px 48px 40px;
 }
 
 .card {
@@ -238,58 +201,54 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: relative;
-    z-index: 0;
 }
 
 .lots {
     padding: 0 24px;
-    box-sizing: border-box;
 }
 
 .lots .container {
-    padding: 0 24px;
+    padding: 0;
     margin-top: 60px;
     width: 100%;
-    max-width: 100%;
-    box-sizing: border-box;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .lots__card-list {
     list-style: none;
     display: flex;
-    flex-direction: row;
     gap: 25px;
-    align-content: space-between;
 }
 
 .lots__look-more-link {
     display: block;
     font-family: Raleway;
-    font-weight: 400;
     font-size: 20px;
-    line-height: 100%;
     border-bottom: 1px solid black;
     color: black;
     margin-top: 20px;
-    margin-left: 0;
+    margin-left: 24px;
 }
-
 
 .about {
-    gap: 72px;
     margin-top: 140px;
+    padding: 0 24px;
 }
-
 
 .about .container {
     display: grid;
     grid-template-columns: 334px 1fr;
     gap: 72px;
     align-items: start;
-    justify-items: center;
+    justify-items: start;
 }
 
+.logo__column {
+    display: flex;
+    justify-content: center;
+}
 
 .about__column {
     display: flex;
@@ -301,7 +260,6 @@
     margin-top: auto;
 }
 
-
 .about__logo {
     width: 240px;
     height: 240px;
@@ -309,7 +267,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background-color: black
+    background-color: black;
 }
 
 .about__logo-image {
@@ -321,34 +279,17 @@
 .about__title {
     font-family: Raleway;
     font-weight: 700;
-    font-style: Bold;
     font-size: 40px;
-    line-height: 100%;
-    letter-spacing: 0%;
     text-transform: uppercase;
     margin-bottom: 32px;
 }
 
 .about__text {
     font-family: Raleway;
-    font-weight: 400;
-    font-style: Regular;
     font-size: 20px;
     line-height: 24px;
-    letter-spacing: 0%;
-    width: 100%;
-    max-width: 720px;
     margin-bottom: 24px;
 }
-
-.about__column {
-    align-self: start;
-}
-
-.about__text:first-child {
-    margin-bottom: 24px;
-}
-
 
 .container {
     width: 100%;
@@ -356,13 +297,11 @@
     margin-bottom: 20px;
 }
 
-
 .footer .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
     align-items: start;
-    height: auto;
     margin-top: 120px;
 }
 
@@ -375,21 +314,14 @@
 
 .footer__menu-link {
     font-family: Raleway;
-    font-weight: 400;
-    font-style: Regular;
     font-size: 18px;
-    line-height: 24.3px;
-    letter-spacing: 0%;
     color: black;
 }
 
 .footer__social-list {
     display: flex;
-    flex-direction: row;
-    align-items: end;
     gap: 16px;
     width: 240px;
-    height: 48px;
     justify-content: space-between;
     list-style: none;
 }
@@ -404,5 +336,5 @@
 }
 
 .footer {
-    height: 
+    height:auto;
 }
