--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@
     margin-top: 0;
     margin-bottom: 150px;
     width: 100%;
-    height: 758px;
+    height: 760px;
     background-image: url('../images/cover.jpg');
     background-size: cover;
     background-position: center;
@@ -247,12 +247,12 @@ button {
     box-sizing: border-box;
 }
 
-.lots .container {
-    margin-top: 60px;
-    width: 100%;
-    max-width: 100%;
-    box-sizing: border-box;
-}
+    .lots .container {
+        margin-top: 60px;
+        width: 100%;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
 
 .lots__card-list {
     list-style: none;
@@ -263,49 +263,41 @@ button {
 }
 
 .lots__look-more-link {
+    display: block;
     font-family: Raleway;
     font-weight: 400;
     font-size: 20px;
     line-height: 100%;
     border-bottom: 1px solid black;
     color: black;
-    margin-top: 30px;
-    margin-left: 40px;
+    margin-top: 20px;
+    margin-left: 0;
 }
 
 
 .about {
     gap: 72px;
-    margin-top: 120px;
-    margin-bottom: 180px;
+    margin-top: 140px;
 }
 
-.about .container {
-    display: grid;
-    grid-template-columns: 334px 1fr;
-    gap: 72px;
-    align-items: start;
-    justify-items: center;
-}
+    .about .container {
+        display: grid;
+        grid-template-columns: 334px 1fr;
+        gap: 72px;
+        align-items: start;
+        justify-items: center;
+    }
 
 .about__column {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-left: 30px;
-    width: 693px;
-}
-logo__column {
-
 }
 
 .about__text:last-child {
     margin-top: auto;
 }
 
-.logo_column {
-    
-}
 
 .about__logo {
     width: 240px;
@@ -314,9 +306,7 @@ logo__column {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background-color: black;
-    margin-left: 67px;
-    margin-top: 47px;
+    background-color: black
 }
 
 .about__logo-image {
@@ -333,6 +323,7 @@ logo__column {
     line-height: 100%;
     letter-spacing: 0%;
     text-transform: uppercase;
+    margin-bottom: 32px;
     margin-top: 136px;
     margin-bottom: 100px;
 }
@@ -346,11 +337,11 @@ logo__column {
     letter-spacing: 0%;
     width: 100%;
     max-width: 720px;
+    margin-bottom: 24px;
 }
 
 .about__column {
-    align-self: end;
-    height: 449px;
+    align-self: start;
 }
 
 .about__text:first-child {
@@ -412,7 +403,5 @@ logo__column {
 }
 
 .footer {
-    display: flex;
-    align-content: start;
-    justify-content: space-between;
+    height:
 }
