--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@
 
 .cover {
     margin-top: 0;
-    margin-bottom: 150px;
+    margin-bottom: 155px;
     width: 100%;
     height: 760px;
     background-image: url('../images/cover.jpg');
@@ -181,7 +181,7 @@ button {
 
 .lots__card-list-item {
     width: 334px;
-    height: 560px;
+    height: 580px;
 }
 
 .lots__heading {
@@ -268,10 +268,9 @@ button {
     font-weight: 400;
     font-size: 20px;
     line-height: 100%;
-    border-bottom: 1px solid black;
     color: black;
-    margin-top: 20px;
-    margin-left: 0;
+    margin-top: 30px;
+    margin-left: 60px;
 }
 
 
